# python-nautilusclient

./: .gitignore  .gitreview  README.rst  project.config  requirements.txt  setup.cfg  tox.ini
nautilusclient/: baseclient.py  exceptions.py  i18n.py  options.py  shell.py  utils.py
nautilusclient/api/: engine.py
nautilusclient/commands/: stocks.py
