[metadata]
name = python-nautilusclient
summary = Client Library for Nautilus
description-file =
    README.rst
license = Apache License, Version 2.0
author = Tin Lam
author-email = tin@irrational.io
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    nautilusclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
  nautilus = nautilusclient.shell:cli

[build_sphinx]
builders = html,man
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1
